--- a/admin/delete-modal/delete-modal.component.html
+++ b/admin/delete-modal/delete-modal.component.html
@@ -2,7 +2,7 @@
     <div class="contracting-party-modal">
       <div class="contracting-party-modal-header">
         <span class="contracting-party-modal-header-text"
-          >Deshironi te fshini nga lista kete produkt?</span
+          >Are you sure that you want to delete this book from the list?</span
         >
         <div class="contracting-party-modal-header-icon">
           <svg
