--- a/student/contact/contact.component.html
+++ b/student/contact/contact.component.html
@@ -2,25 +2,29 @@
   <h2 class="w3-text-light">CONTACT ME</h2>
   <hr style="width: 200px" class="w3-opacity" />
 
-  <div class="w3-section">
+  <div class="w3-large w3-margin-bottom">
     <p>
       <i
-        class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"
+        class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"
       ></i>
       Rruga Abdyl Frasheri, Hekla Center, K3-9, Tirana, Albania
     </p>
     <p>
-      <i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>
+      <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>
       Phone: +355 69605 1001
     </p>
     <p>
-      <i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right">
+      <i
+        class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"
+      >
       </i>
       Email: info@ikubinfo.al
     </p>
   </div>
   <br />
-  <p style="color: green">Let's get in touch. Send me an email with these information included:</p>
+  <p style="color: green">
+    Let's get in touch. Send me an email with these information included:
+  </p>
 
   <form action="/action_page.php" target="_blank">
     <p>
