--- a/admin/students-list/students-list.component.html
+++ b/admin/students-list/students-list.component.html
@@ -12,29 +12,57 @@
 
   <div class="container mt-5 px-2"></div>
 
-  <table mat-table class="mat-elevation-z8" >
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let element" formControlName="id">{{ element.id }}</td>
-    </ng-container>
-    <ng-container matColumnDef="username">
-      <th mat-header-cell *matHeaderCellDef>username</th>
-      <td mat-cell *matCellDef="let element" formControlName="username">{{ element.username }}</td>
-    </ng-container>
-    <ng-container matColumnDef="password">
-      <th mat-header-cell *matHeaderCellDef>password</th>
-      <td mat-cell *matCellDef="let element " formControlName="password">{{ element.password }}</td>
-    </ng-container>
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef>Action</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.action }}
-        <button mat-button (click)="deleteFunction(element)">Delete</button>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+  <div class="container mt-5 px-2">
+    <div class="mb-2 d-flex justify-content-between align-items-center">
+      <div class="position-relative">
+        <span class="position-absolute search"><i class="search"></i> </span>
+        <button>
+          <form [formGroup]="form">
+            <input
+              type="search"
+              required
+              class="form-control w-100"
+              placeholder="Search..."
+              formControlName="filter"
+              (input)="filter()"
+            />
+          </form>
+        </button>
+      </div>
+    </div>
+    <div class="scss">
+      <div class="mat-elevation-z8">
+        <table class="table table-responsive table-borderless">
+          <thead>
+            <tr class="bg-light">
+              <th scope="col" width="21.1%">Student Id</th>
+              <th scope="col" width="21.1%">Username</th>
+              <th scope="col" width="21.1%">Password</th>
+              <th scope="col" width="21.1%"><span>Active/Disable</span></th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let item of data">
+            <tr>
+              <td>{{ item.id }}</td>
+              <td>{{ item.username }}</td>
+              <td>{{ item.password }}</td>
+
+              <td class=" ">
+                <button mat-raised-button type="button" class="btn btn-light">
+                  <mat-slide-toggle> </mat-slide-toggle>
+                </button>
+              </td>
+            </tr>
+            <p class="color">
+              {{ dateVal | date : "d/M/y HH:mm:ss" }}
+            </p>
+            <hr />
+            <thead></thead>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 
   <div class="container mt-5 px-2"></div>
   <button
