--- a/admin/students-list/students-list.component.scss
+++ b/admin/students-list/students-list.component.scss
@@ -1,11 +1,26 @@
-/* Structure */
-table {
-    width: 100%;
-    height: 350px;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 100%;
-  }
-  
+.form-control{
+  width: 600px;
+}
+.text-center {
+  margin-top: 30px;
+}
+
+.error{
+  color: red;
+}
+.example-radio-group {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
+
+.example-radio-button {
+  margin: 5px;
+}
+.color{
+  background-color: rgb(212, 224, 224);
+}
+.scss{
+  background-color:rgb(243, 235, 235);
+}
