--- a/login/login.component.html
+++ b/login/login.component.html
@@ -7,22 +7,30 @@
             src="https://media.istockphoto.com/id/157482029/photo/stack-of-books.jpg?s=612x612&amp;w=0&amp;k=20&amp;c=ZxSsWKNcVpEzrJ3_kxAUuhBCT3P_dfnmJ81JegPD8eE="
           /><small>Login to your account!</small></span
         >
-        <form [formGroup]="loginForm">
+        <form class="was-validated" [formGroup]="loginForm">
           <div class="form-inputs">
+            <label for="validationTextarea" class="form-label">Username</label>
             <input
               type="text"
+              class="form-control valid"
               placeholder="User Name"
               formControlName="username"
               required
               minlength="3"
             />
+
             <div class="password">
+              <label for="validationTextarea" class="form-label"
+                >Password</label
+              >
               <input
+                class="form-control valid"
                 id="password"
                 type="password"
                 placeholder="Password"
                 formControlName="password"
-                minlength="3"
+                minlength="4"
+                required
               />
               <div *ngIf="!loginForm.valid" class="error">
                 <p>Please fill all the forms above</p>
