--- a/admin/admin.component.html
+++ b/admin/admin.component.html
@@ -152,7 +152,7 @@
                       <table class="table table-responsive table-borderless">
                         <thead>
                           <tr class="bg-light">
-                            <th scope="col" width="21.1%">Student Id</th>
+                            <th scope="col" width="21.1%">Student id</th>
                             <th scope="col" width="21.1%">Username</th>
                             <th scope="col" width="21.1%">Password</th>
                             <th scope="col" width="21.1%">
