--- a/admin/books-list/books-list.component.html
+++ b/admin/books-list/books-list.component.html
@@ -22,7 +22,7 @@
               type="search"
               required
               class="form-control w-100"
-              placeholder="Kerko Produkt me ID/Barcode!"
+              placeholder="Search..."
               formControlName="filter"
               (input)="filter()"
             />
