--- a/student/panel/panel.component.html
+++ b/student/panel/panel.component.html
@@ -2,7 +2,7 @@
   <button
     class="w3-button w3-light-grey w3-padding-large"
     type="submit"
-    [routerLink]="['/reserve']"
+    routerLink='/reserve'
     routerLinkActive="router-link-active"
   >
     <i class="fa-solid fa-check"></i>
