--- a/admin/new-student/new-student.component.html
+++ b/admin/new-student/new-student.component.html
@@ -8,24 +8,25 @@
     </h1>
     <div class="mb-4 d-flex justify-content-between align-items-center">
       <div class="position-relative">
-        <form [formGroup]="form">
+        <form [formGroup]="form" class="was-validated">
           <div class="mb-3">
             <h3>Student Id</h3>
             <input
               type="text"
-              class="form-control"
-              id="Id"
-              formControlName="Id"
+              class="form-control valid"
+              id="id"
+              formControlName="id"
               placeholder="Id"
               required
               minlength="5"
             />
           </div>
+
           <div class="mb-3">
             <h3>Name, Last Name</h3>
             <input
               type="text"
-              class="form-control"
+              class="form-control valid"
               id="Emri"
               placeholder="Name, Last Name"
               required
@@ -37,7 +38,7 @@
             <h3>Email</h3>
             <input
               type="text"
-              class="form-control"
+              class="form-control valid"
               id="Email"
               placeholder="Email"
               required
@@ -48,7 +49,7 @@
             <h3>Username</h3>
             <input
               type="text"
-              class="form-control"
+              class="form-control valid"
               id="username"
               formControlName="username"
               placeholder="Username"
@@ -60,7 +61,7 @@
             <h3>Password</h3>
             <input
               type="text"
-              class="form-control"
+              class="form-control valid"
               id="password"
               formControlName="password"
               placeholder="Password"
