--- a/admin/students-list/students-list.component.html
+++ b/admin/students-list/students-list.component.html
@@ -1,15 +1,5 @@
 <div class="container mt-5 px-2">
-  <button
-    type="button"
-    class="btn btn-danger"
-    href="#"
-    routerLink="/admin"
-    routerLinkActive="active"
-    ariaCurrentWhenActive="page"
-  >
-    Turn To The Main Page
-  </button>
-
+  <button mat-button mat-dialog-close>Close</button>
   <div class="container mt-5 px-2"></div>
 
   <div class="container mt-5 px-2">
@@ -23,13 +13,118 @@
               required
               class="form-control w-100"
               placeholder="Search..."
-              formControlName="filter"
               (input)="filter()"
             />
           </form>
         </button>
       </div>
+      <button
+        mat-button
+        color="primary"
+        (click)="openDialogWithTemplateRef(myDialog)"
+      >
+        Add A New Student!
+      </button>
     </div>
+
+    <ng-template #myDialog>
+      <mat-dialog-content>
+        <div class="col-md-6 ">
+          <div class="container mt-2 px-6">
+            <h1
+              class="mb-5 d-flex justify-content-between align-items-center"
+              style="color: green"
+            >
+              Add A New Student!
+            </h1>
+            <div class="mb-2 d-flex justify-content-between align-items-center">
+              <div class="position-relative">
+                <form [formGroup]="form" class="was-validated">
+                  <div class="mb-2">
+                    <h3>Student Id</h3>
+                    <input
+                      type="text"
+                      class="form-control valid"
+                      id="id"
+                      formControlName="id"
+                      placeholder="Id"
+                      required
+                      minlength="5"
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <h3>Name, Last Name</h3>
+                    <input
+                      type="text"
+                      class="form-control valid"
+                      id="Emri"
+                      placeholder="Name, Last Name"
+                      required
+                      minlength="5"
+                    />
+                  </div>
+
+                  <div class="mb-3">
+                    <h3>Email</h3>
+                    <input
+                      type="text"
+                      class="form-control valid"
+                      id="Email"
+                      placeholder="Email"
+                      required
+                      minlength="7"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <h3>Username</h3>
+                    <input
+                      type="text"
+                      class="form-control valid"
+                      id="username"
+                      formControlName="username"
+                      placeholder="Username"
+                      required
+                      minlength="3"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <h3>Password</h3>
+                    <input
+                      type="text"
+                      class="form-control valid"
+                      id="password"
+                      formControlName="password"
+                      placeholder="Password"
+                      required
+                      minlength="3"
+                    />
+                  </div>
+
+                  <div *ngIf="!form.valid" class="error">
+                    <p>Please complete the required placeholders!</p>
+                  </div>
+                  <hr />
+                  <button
+                    type="button"
+                    class="btn btn-primary"
+                    href="#"
+                    routerLinkActive="active"
+                    (click)="goToAdd()"
+                  >
+                    Generate a new student !
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="mb-5 d-flex justify-content-between align-items-center"
+        ></div>
+      </mat-dialog-content>
+    </ng-template>
+
     <div class="scss">
       <div class="mat-elevation-z8">
         <table class="table table-responsive table-borderless">
@@ -38,7 +133,7 @@
               <th scope="col" width="21.1%">Student Id</th>
               <th scope="col" width="21.1%">Username</th>
               <th scope="col" width="21.1%">Password</th>
-              <th scope="col" width="21.1%"><span>Active/Disable</span></th>
+              <th scope="col" width="21.1%"><span>Edit</span></th>
             </tr>
           </thead>
           <tbody *ngFor="let item of data">
@@ -48,8 +143,19 @@
               <td>{{ item.password }}</td>
 
               <td class=" ">
-                <button mat-raised-button type="button" class="btn btn-light">
+                <!-- <button mat-raised-button type="button" class="btn btn-light">
                   <mat-slide-toggle> </mat-slide-toggle>
+                </button> -->
+                <button
+                  mat-raised-button
+                  type="button"
+                  class="btn btn-primary mr-1"
+                >
+                  EDIT
+                </button>
+
+                <button mat-raised-button type="button" class="btn btn-danger">
+                  DELETE
                 </button>
               </td>
             </tr>
@@ -64,16 +170,5 @@
     </div>
   </div>
 
-  <div class="container mt-5 px-2"></div>
-  <button
-    type="button"
-    class="btn btn-primary"
-    href="#"
-    routerLink="/new-student"
-    routerLinkActive="active"
-    ariaCurrentWhenActive="page"
-  >
-    Add a new Student!
-  </button>
   <div class="container mt-5 px-2"></div>
 </div>
