--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -14,6 +14,13 @@
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"
       ><i class="fa fa-th"></i> PORTFOLIO</a
     >
+    <a
+      href="#"
+      [routerLink]="['/homepage/books']"
+      routerLinkActive="router-link-active"
+      class="w3-bar-item w3-button w3-hide-small"
+      ><i class="fa fa-th"></i> BOOKS</a
+    >
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"
       ><i class="fa fa-envelope"></i> CONTACT</a
     >
@@ -22,17 +29,6 @@
       <i class="fa fa-envelope"></i>
       Login!
     </button>
-
-    <div>
-      <a
-        routerLink="/search-modal"
-        class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"
-      >
-        <span class="popuptext">Search a book .</span>
-
-        <i class="fa fa-search"></i>
-      </a>
-    </div>
   </div>
 
   <!-- Navbar on small screens -->
@@ -114,6 +110,14 @@
         provide us with so many benefits. We should encourage everyone to read
         more books and useless phones.
       </p>
+      <div
+        (click)="openIt()"
+        class="w3-bar-item w3-button w3-hide-small w3-right w3-hover"
+      >
+        <div class="container">
+          <h1>Search Every BooK!</h1>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -319,12 +323,3 @@
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
 </footer>
-
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-/>
