--- a/homepage/search-modal/search-modal.component.html
+++ b/homepage/search-modal/search-modal.component.html
@@ -1,18 +1,5 @@
-
-  <div class="container mt-5 px-2">
-    <button
-      type="button"
-      class="btn btn-danger"
-      href="#"
-      routerLink="/home"
-      routerLinkActive="active"
-      ariaCurrentWhenActive="page"
-    >
-      Turn back to the main page
-    </button>
-  </div>
 <div class="container" style="margin-top: 10%">
-  <div class="col-md-6 col-md-offset-3" >
+  <div class="col-md-6 col-md-offset-3">
     <div class="row">
       <div id="logo" class="text-center">
         <h1>Search Every BooK!</h1>
@@ -43,9 +30,7 @@
       <h1>{{ data.volumeInfo.title }}</h1>
       <h2>{{ data.volumeInfo.authors[0] }}</h2>
       <p>{{ data.volumeInfo.description }}</p>
-      <img
-        src="{{ data.volumeInfo.imageLinks.thumbnail }}"
-      />
+      <img src="{{ data.volumeInfo.imageLinks.thumbnail }}" />
     </div>
   </div>
 </div>
