--- a/student/student.component.scss
+++ b/student/student.component.scss
@@ -1,6 +1,20 @@
 
-.w3-sidebar {
-    width: 120px;
-    background: #222;
-}
 
+ .w3-bar{
+    background-color: rgb(247, 245, 223);
+
+}
+.w3-top{
+    background-color: rgb(197, 243, 243);
+}
+.my-custom-scrollbar {
+    position: relative;
+    height: 65vh;
+    overflow: auto;
+    }
+    .table-wrapper-scroll-y {
+    display: block;
+    }
+    #page-content {
+        flex: 1 0 auto;
+      }
